core/codegen/tests/ui-fail-nightly/route-type-errors.stderr
error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
 --> $DIR/route-type-errors.rs:6:7
  |
6 | fn f0(foo: Q) {}
  |       ^^^^^^ the trait `FromParam<'_>` is not implemented for `Q`

error[E0277]: the trait bound `Q: FromSegments<'_>` is not satisfied
 --> $DIR/route-type-errors.rs:9:7
  |
9 | fn f1(foo: Q) {}
  |       ^^^^^^ the trait `FromSegments<'_>` is not implemented for `Q`

error[E0277]: the trait bound `Q: FromFormValue<'_>` is not satisfied
  --> $DIR/route-type-errors.rs:12:7
   |
12 | fn f2(foo: Q) {}
   |       ^^^^^^ the trait `FromFormValue<'_>` is not implemented for `Q`

error[E0277]: the trait bound `Q: FromQuery<'_>` is not satisfied
  --> $DIR/route-type-errors.rs:15:7
   |
15 | fn f3(foo: Q) {}
   |       ^^^^^^ the trait `FromQuery<'_>` is not implemented for `Q`

error[E0277]: the trait bound `Q: FromData` is not satisfied
  --> $DIR/route-type-errors.rs:18:7
   |
18 | fn f4(foo: Q) {}
   |       ^^^^^^ the trait `FromData` is not implemented for `Q`
   |
   = note: required because of the requirements on the impl of `FromTransformedData<'_>` for `Q`

error[E0277]: the trait bound `Q: FromRequest<'_, '_>` is not satisfied
  --> $DIR/route-type-errors.rs:21:7
   |
21 | fn f5(a: Q, foo: Q) {}
   |       ^^^^ the trait `FromRequest<'_, '_>` is not implemented for `Q`

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> $DIR/route-type-errors.rs:21:13
   |
21 | fn f5(a: Q, foo: Q) {}
   |             ^^^^^^ the trait `FromParam<'_>` is not implemented for `Q`

error[E0277]: the trait bound `Q: FromRequest<'_, '_>` is not satisfied
  --> $DIR/route-type-errors.rs:24:7
   |
24 | fn f6(a: Q, foo: Q, good: usize, bar: Q) {}
   |       ^^^^ the trait `FromRequest<'_, '_>` is not implemented for `Q`

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> $DIR/route-type-errors.rs:24:13
   |
24 | fn f6(a: Q, foo: Q, good: usize, bar: Q) {}
   |             ^^^^^^ the trait `FromParam<'_>` is not implemented for `Q`

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> $DIR/route-type-errors.rs:24:34
   |
24 | fn f6(a: Q, foo: Q, good: usize, bar: Q) {}
   |                                  ^^^^^^ the trait `FromParam<'_>` is not implemented for `Q`
